--- a/src/components/Volunteer/common.css
+++ b/src/components/Volunteer/common.css
@@ -4,3 +4,43 @@
 #verify {
   display: none;
 }
+.Registration header {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+.Registration-content {
+  width: 70%;
+  margin: 0;
+  text-align: left;
+  font-size: 16px;
+}
+.Login-btn {
+  margin-top: 30px;
+  width: 230px;
+  height: 40px;
+  background-color: #fff;
+  border: 1px solid grey;
+  box-shadow: 2px 2px 10px #888888;
+  cursor: pointer;
+}
+.Login-btn:hover {
+  box-shadow: none;
+  transition: 0.5;
+}
+
+.Login-btn div {
+  background: transparent;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.Login-btn p {
+  text-align: center;
+  width: 70%;
+  color: #777777;
+}
