Added few styles

--- a/src/components/Homepage/Homepage.css
+++ b/src/components/Homepage/Homepage.css
@@ -1,7 +1,30 @@
+:root {
+  --cfa-blue: #3c7ec8;
+  --btn-hover: #6e6968;
+}
+.image-container {
+  width: 100%;
+  text-align: left;
+}
+.image-container img {
+  width: 100px;
+  margin: 20px;
+}
 .Homepage button {
-  width: 200px;
-  height: 30px;
+  width: 257px;
+  height: 40px;
   font-size: 15px;
+  background-color: var(--cfa-blue);
+  color: white;
+  border: none;
+}
+.Homepage button:hover {
+  background-color: var(--btn-hover);
+  transition: 0.7s;
+}
+.Homepage a {
+  text-decoration: none;
+  color: #f8c608;
 }
 .Homepage-link {
   text-decoration: none;
