--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,18 @@
+/* html,
+body,
+#root,
+#root > div {
+  height: fit-content;
+} */
 .App {
   text-align: center;
+  background-color: black;
+  height: 100%;
+  color: white;
+  min-height: 100vh;
+}
+h1 {
+  margin-top: 0;
 }
 
 .App-logo {
