--- a/src/components/Volunteer/common.css
+++ b/src/components/Volunteer/common.css
@@ -44,3 +44,11 @@
   background-color: var(--btn-hover);
   transition: 0.7s;
 }
+
+.VP-Filter-container {
+  height: 100px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-between;
+}
