--- a/src/components/Volunteer/common.css
+++ b/src/components/Volunteer/common.css
@@ -56,3 +56,36 @@
 .VP-Filter-container table {
   text-align: left;
 }
+.Table-container {
+  margin-top: 20px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  font-size: 20px;
+  overflow: auto;
+}
+thead {
+  background-color: var(--cfa-blue);
+  color: black;
+}
+tbody {
+  background-color: white;
+  color: black;
+}
+tr {
+  display: grid;
+  grid-template-columns: repeat(10, 1fr);
+  place-items: center;
+  border-bottom-style: solid;
+  border-width: 1px;
+  border-color: gray;
+}
+th {
+  padding-left: 50px;
+  padding-right: 50px;
+}
+td {
+  padding-top: 10px;
+  padding-bottom: 10px;
+}
