--- a/src/components/Volunteer/common.css
+++ b/src/components/Volunteer/common.css
@@ -19,7 +19,7 @@
 }
 .Auth-container {
   margin-top: 25px;
-  height: 120px;
+  height: fit-content;
   width: 100%;
   display: flex;
   flex-direction: column;
@@ -46,7 +46,7 @@
 }
 
 .VP-Filter-container {
-  height: 100px;
+  height: fit-content;
   display: flex;
   flex-direction: column;
   align-items: center;
